# sessionscout

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: production_architecture.md
scripts/: run_pipeline.py  sensitivity_analysis.py  simulate_session.py
src/sessionscout/: config.py
src/sessionscout/api/: main.py
src/sessionscout/api/routes/: batch.py  predict.py
src/sessionscout/explainability/: attention_viz.py  shap_deep.py
src/sessionscout/features/: __init__.py  engineering.py  sequences.py
src/sessionscout/model/: dataset.py  evaluate.py  lstm.py  train.py  transformer.py
tests/: test_api.py  test_explainability.py  test_features.py  test_models.py  test_sequences.py  test_training.py
