[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sessionscout"
version = "0.1.0"
description = "Real-time session conversion scoring engine"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "mlflow>=2.10.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "redis>=5.0.0",
    "httpx>=0.26.0",
    "shap>=0.44.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
    "kaggle>=1.6.0",
    "tqdm>=4.66.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
